[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swapwithus_backend"
version = "0.1.0"
description = "SwapWithUs Backend API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Meisam Kabiri"},
]

# Dependencies are in requirements.txt (we'll keep it separate for now)
# This allows pip install -e . to work without duplicating dependencies
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.0",
    "types-requests>=2.28.11",
    "isort>=5.10",
]

[tool.setuptools]
# Tell setuptools to find all packages automatically
# This is equivalent to find_packages() in setup.py
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "*.egg-info"]

[tool.setuptools.package-data]
# Include non-Python files if needed
"*" = ["*.json", "*.yaml", "*.yml"]


# Optional: Configure tools 

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]          # Import sorting
ignore = ["E501"]              # Ignore line-length warning if needed

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.egg-info
  | build
  | dist
)/
'''


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"

# Make mypy less strict for development
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_calls = true
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false

exclude = [
    "swapwithus_backend.egg-info",
    "swapwithus.egg-info",
    "build",
    "dist",
]