[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swapwithus_backend"
version = "0.1.0"
description = "SwapWithUs Backend API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Meisam Kabiri"},
]

# Dependencies are in requirements.txt (we'll keep it separate for now)
# This allows pip install -e . to work without duplicating dependencies
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.0",
    "types-requests>=2.28.11",
    "isort>=5.10",
]

[tool.setuptools]
# Tell setuptools to find all packages automatically
# This is equivalent to find_packages() in setup.py
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "*.egg-info"]

[tool.setuptools.package-data]
# Include non-Python files if needed
"*" = ["*.json", "*.yaml", "*.yml"]


# Optional: Configure tools 

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]          # Import sorting
ignore = ["E501"]              # Ignore line-length warning if needed

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.egg-info
  | build
  | dist
)/
'''


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"

# Make mypy less strict for development
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
implicit_optional = true
warn_return_any = false
warn_unused_ignores = false

exclude = [
    "swapwithus_backend.egg-info",
    "swapwithus.egg-info",
    "build",
    "dist",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
testpaths = ["test"]
addopts = "-v"
# Auto-detect async tests without requiring @pytest.mark.asyncio decorator
asyncio_mode = "auto"
# Create ONE event loop per session and reuse it for ALL tests and fixtures
# This allows session-scoped async fixtures (like db_pool) to work across all tests
# Without this, each test gets a new loop and can't use session-scoped fixtures
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"